# Projet-chiffrement-d-chiffrement-l2-info

./: .gitignore  CMakeLists.txt  benchmark.sh  cipher.c  cipher.h  copy.c  copy.h  dico.c  dico.h  dico.txt  dictionnaire.h  freq.c  freq.h  main.c  makefile  test.c  test.cpp  test.h  test.txt  test_crack.sh  test_crack_wo_echo.sh  test_script.sh  types.h  valid.c  valid.h  xorcipher
Projet_S3/: xorcipher
